[package]
name = "axia-statement-table"
version = "0.19.8"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
primitives = { package = "axia-primitives", path = "../primitives" }
