[package]
name = "erasure_coding_fuzzer"
version = "0.19.8"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
axia-erasure-coding = { path = ".." }
honggfuzz = "0.5"
primitives = { package = "axia-node-primitives", path = "../../node/primitives/" }

[[bin]]
name = "reconstruct"
path = "src/reconstruct.rs"

[[bin]]
name = "round_trip"
path = "src/round_trip.rs"

[workspace]
