[package]
name = "axia-client"
version = "0.9.12"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }

sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }

sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sc-service = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "axia-v0.9.12" }

pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }

beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }

# AXIA Runtimes
axia-runtime = { path = "../../runtime/axia", optional = true }
kusama-runtime = { path = "../../runtime/kusama", optional = true }
alphanet-runtime = { path = "../../runtime/alphanet", optional = true }
betanet-runtime = { path = "../../runtime/betanet", optional = true }

axia-primitives = { path = "../../primitives" }

[features]
default = ["axia"]
axia = ["axia-runtime"]
kusama = ["kusama-runtime"]
betanet = ["betanet-runtime"]
alphanet = ["alphanet-runtime"]
