[package]
name = "axia-node-collation-generation"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
tracing = "0.1.29"
axia-erasure-coding = { path = "../../erasure-coding" }
axia-node-primitives = { path = "../primitives" }
axia-node-subsystem = { path = "../subsystem" }
axia-node-subsystem-util = { path = "../subsystem-util" }
axia-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-maybe-compressed-blob  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
thiserror = "1.0.30"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["bit-vec", "derive"] }

[dev-dependencies]
axia-node-subsystem-test-helpers = { path = "../subsystem-test-helpers" }
