[package]
name = "axia-node-subsystem-types"
version = "0.9.12"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
description = "Subsystem traits and message definitions"

[dependencies]
derive_more = "0.99.11"
futures = "0.3.17"
axia-primitives = { path = "../../primitives" }
axia-node-primitives = { path = "../primitives" }
axia-node-network-protocol = { path = "../network/protocol" }
axia-statement-table = { path = "../../statement-table" }
axia-node-jaeger = { path = "../jaeger" }
axia-overseer-gen = { path = "../overseer/overseer-gen" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
smallvec = "1.6.1"
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
thiserror = "1.0.30"
