[package]
name = "axia-voter-bags"
version = "0.9.0"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
generate-bags = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
structopt = "0.3.21"

alphanet-runtime = { path = "../../runtime/alphanet" }
kusama-runtime = { path = "../../runtime/kusama" }
axia-runtime = { path = "../../runtime/axia" }
