[package]
name = "test-allychain-halt"
version = "0.9.12"
authors = ["Parity Technologies <admin@axiacoin.network>"]
description = "Test allychain which executes forever"
edition = "2018"
build = "build.rs"

[dependencies]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

[features]
default = [ "std" ]
std = []
