[package]
name = "bp-axia"
description = "Primitives of AXIA runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]

# Bridge Dependencies
bp-messages = { path = "../messages", default-features = false }
bp-axia-core = { path = "../axia-core", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Based Dependencies

sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "axia-v0.9.12" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "axia-v0.9.12" }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-axia-core/std",
	"bp-runtime/std",
	"sp-api/std",
	"sp-std/std",
]
