[package]
name = "bp-betanet"
description = "Primitives of BetaNet runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
smallvec = "1.6"

# Bridge Dependencies
bp-messages = { path = "../messages", default-features = false }
bp-axia-core = { path = "../axia-core", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Based Dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "axia-v0.9.12" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "axia-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "axia-v0.9.12" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "axia-v0.9.12" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "axia-v0.9.12" }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-axia-core/std",
	"bp-runtime/std",
	"frame-support/std",
	"parity-scale-codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
]
