[package]
name = "bp-wococo"
description = "Primitives of Wococo runtime."
version = "0.1.0"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

# Bridge Dependencies
bp-messages = { path = "../messages", default-features = false }
bp-axia-core = { path = "../axia-core", default-features = false }
bp-betanet = { path = "../chain-betanet", default-features = false }
bp-runtime = { path = "../runtime", default-features = false }

# Substrate Based Dependencies
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-axia-core/std",
	"bp-runtime/std",
	"bp-betanet/std",
	"parity-scale-codec/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-std/std",
]
