[package]
name = "substrate-relay"
version = "0.1.0"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "2.0.0" }
futures = "0.3.12"
hex = "0.4"
log = "0.4.14"
num-format = "0.4"
num-traits = "0.2"
paste = "1.0"
structopt = "0.3"

# Bridge dependencies

bp-header-chain = { path = "../../primitives/header-chain" }
bp-kusama = { path = "../../primitives/chain-kusama" }
bp-messages = { path = "../../primitives/messages" }
bp-message-dispatch = { path = "../../primitives/message-dispatch" }
bp-millau = { path = "../../primitives/chain-millau" }
bp-axia = { path = "../../primitives/chain-axia" }
bp-rialto = { path = "../../primitives/chain-rialto" }
bp-betanet = { path = "../../primitives/chain-betanet" }
bp-wococo = { path = "../../primitives/chain-wococo" }
bp-runtime = { path = "../../primitives/runtime" }
bp-alphanet = { path = "../../primitives/chain-alphanet" }
bridge-runtime-common = { path = "../../bin/runtime-common" }
finality-grandpa = "0.14.1"
finality-relay = { path = "../finality" }
headers-relay = { path = "../headers" }
messages-relay = { path = "../messages" }
millau-runtime = { path = "../../bin/millau/runtime" }
pallet-bridge-messages = { path = "../../modules/messages" }
relay-kusama-client = { path = "../client-kusama" }
relay-millau-client = { path = "../client-millau" }
relay-axia-client = { path = "../client-axia" }
relay-rialto-client = { path = "../client-rialto" }
relay-betanet-client = { path = "../client-betanet" }
relay-wococo-client = { path = "../client-wococo" }
relay-substrate-client = { path = "../client-substrate" }
relay-utils = { path = "../utils" }
relay-alphanet-client = { path = "../client-alphanet" }
rialto-runtime = { path = "../../bin/rialto/runtime" }

# Substrate Dependencies

frame-support = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }

[dev-dependencies]
hex-literal = "0.3"
pallet-bridge-grandpa = { path = "../../modules/grandpa" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "axia-v0.9.12" }
