[package]
name = "relay-alphanet-client"
version = "0.1.0"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
headers-relay = { path = "../headers" }
relay-substrate-client = { path = "../client-substrate" }
relay-utils = { path = "../utils" }

# Bridge dependencies

bp-alphanet = { path = "../../primitives/chain-alphanet" }

# Substrate Dependencies

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
