[package]
name = "axia-node-core-chain-selection"
description = "Chain Selection Subsystem"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
futures-timer = "3"
tracing = "0.1.29"
axia-primitives = { path = "../../../primitives" }
axia-node-primitives = { path = "../../primitives" }
axia-node-subsystem = { path = "../../subsystem" }
axia-node-subsystem-util = { path = "../../subsystem-util" }
kvdb = "0.10.0"
thiserror = "1.0.30"
parity-scale-codec = "2"

[dev-dependencies]
axia-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
parking_lot = "0.11"
assert_matches = "1"
kvdb-memorydb = "0.10.0"
