[package]
name = "axia-node-core-runtime-api"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
tracing = "0.1.29"
memory-lru = "0.1.0"
parity-util-mem = { version = "0.10.0", default-features = false }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

axia-primitives = { path = "../../../primitives" }
axia-subsystem = { package = "axia-node-subsystem", path = "../../subsystem" }
axia-node-subsystem-util = { path = "../../subsystem-util" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
futures = { version = "0.3.17", features = ["thread-pool"] }
axia-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
axia-node-primitives = { path = "../../primitives" }
