[package]
name = "axia-availability-bitfield-distribution"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
futures = "0.3.17"
tracing = "0.1.29"
axia-primitives = { path = "../../../primitives" }
axia-subsystem = { package = "axia-node-subsystem", path = "../../subsystem" }
axia-node-subsystem-util = { path = "../../subsystem-util" }
axia-node-network-protocol = { path = "../../network/protocol" }

[dev-dependencies]
axia-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
bitvec = { version = "0.21.0", default-features = false, features = ["alloc"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
maplit = "1.0.2"
log = "0.4.13"
env_logger = "0.9.0"
assert_matches = "1.4.0"
