[package]
name = "axia-collator-protocol"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
always-assert = "0.1.2"
derive_more = "0.99.14"
futures = "0.3.17"
futures-timer = "3"
thiserror = "1.0.30"
tracing = "0.1.29"

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

axia-primitives = { path = "../../../primitives" }
axia-node-network-protocol = { path = "../../network/protocol" }
axia-node-primitives = { path = "../../primitives" }
axia-node-subsystem-util = { path = "../../subsystem-util" }
axia-subsystem = { package = "axia-node-subsystem", path = "../../subsystem" }

[dev-dependencies]
log = "0.4.13"
env_logger = "0.9.0"
assert_matches = "1.4.0"

sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "polkadot-v0.9.12" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
parity-scale-codec = { version = "2.3.1", features = ["std"]  }

axia-subsystem-testhelpers = { package = "axia-node-subsystem-test-helpers", path = "../../subsystem-test-helpers" }
