[package]
name = "axia-node-network-protocol"
version = "0.9.12"
authors = ["Parity Technologies <admin@axiacoin.network>"]
edition = "2018"
description = "Primitives types for the Node-side"

[dependencies]
async-trait = "0.1.51"
axia-primitives = { path = "../../../primitives" }
axia-node-primitives = { path = "../../primitives" }
axia-node-jaeger = { path = "../../jaeger" }
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
strum = { version = "0.22", features = ["derive"] }
derive_more = "0.99.11"
futures = "0.3.17"
thiserror = "1.0.30"
