[package]
name = "axia-statement-distribution"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "Statement Distribution Subsystem"
edition = "2018"

[dependencies]
futures = "0.3.18"
tracing = "0.1.29"
axia-primitives = { path = "../../../primitives" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.12" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
axia-subsystem = { package = "axia-node-subsystem", path = "../../subsystem" }
axia-node-primitives = { path = "../../primitives" }
axia-node-subsystem-util = { path = "../../subsystem-util" }
axia-node-network-protocol = { path = "../../network/protocol" }
arrayvec = "0.5.2"
indexmap = "1.7.0"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
derive_more = "0.99.11"
thiserror = "1.0.30"

[dev-dependencies]
axia-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
assert_matches = "1.4.0"
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
futures-timer = "3.0.2"
