[package]
name = "slot-range-helper"
version = "0.19.8"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
paste = "1.0"
enumn = "0.1.3"
parity-scale-codec = { version = "2.3.1", default-features = false, features = ["derive"] }
sp-std = { package = "sp-std", git = "https://github.com/axia-tech/axlib", default-features = false , branch = "axlib" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", default-features = false , branch = "axlib" }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
]
