[package]
name = "remote-ext-tests-bags-list"
version = "0.19.8"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
axia-runtime = { version = "0.19.8", path = "../../../runtime/axia" }
axctest-runtime = { version = "0.19.8", path = "../../../runtime/axctest" }
alphanet-runtime = { version = "0.19.8", path = "../../../runtime/alphanet" }
axia-runtime-constants = { version = "0.19.8", path = "../../../runtime/axia/constants" }
axctest-runtime-constants = { version = "0.19.8", path = "../../../runtime/axctest/constants" }
alphanet-runtime-constants = { version = "0.19.8", path = "../../../runtime/alphanet/constants" }

pallet-bags-list-remote-tests = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-tracing = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
frame-system = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }
sp-core = { git = "https://github.com/axia-tech/axlib", branch = "axlib" }

clap = { version = "3.0", features = ["derive"] }
log = "0.4.14"
tokio = { version = "1", features = ["macros"] }
