[package]
name = "xcm-simulator-example"
version = "0.9.12"
authors = ["AXIA Technologies <admin@axiacoin.network>"]
description = "Examples of xcm-simulator usage."
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
scale-info = { version = "1.0", features = ["derive"] }

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.12" }

xcm = { path = "../../" }
xcm-simulator = { path = "../" }
xcm-executor = { path = "../../xcm-executor" }
xcm-builder = { path = "../../xcm-builder" }
pallet-xcm = { path = "../../pallet-xcm" }
axia-core-primitives = { path = "../../../core-primitives" }
axia-runtime-allychains = { path = "../../../runtime/allychains" }
axia-allychain = { path = "../../../allychain" }
